--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,13 +1,15 @@
 name: "Release"
 
 on:
-  workflow_dispatch:
   push:
     paths:
       - '.github/workflows/release.yaml'
       - 'Dockerfile'
     branches:
       - main
+  schedule:
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 concurrency:
   group: '${{ github.workflow }}-${{ github.ref }}'
