--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,6 +29,15 @@ jobs:
 
       - uses: docker/setup-buildx-action@v3
 
+      - uses: docker/metadata-action@v4
+        id: meta
+        with:
+          images: ghcr.io/omico/actions-runner
+          flavor: |
+            latest=true
+          tags: |
+            type=raw,value={{date 'YYYYMMDD'}}
+
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -41,4 +50,5 @@ jobs:
           context: .
           push: ${{ github.ref == 'refs/heads/main' }}
           platforms: linux/amd64
-          tags: ghcr.io/omico/actions-runner:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
